# ZenoSetup

./: CMakeLists.txt  README.md  debug.bat  metainfo.pri  release.bat  trans.bat  zeno-setup.pro
ui设计/ZENO@2Installation_20220714/: index.html
ui设计/zeno_installation_asset/spec/: index.html
uninstall/: CMakeLists.txt  Dpi.h  main.cpp  resource.h  uninstall.cpp  uninstall.h  uninstall.pro  uninstall.qrc  uninstall.rc
uninstall/res/: default.css
winsetup/: CMakeLists.txt  winsetup.c  winsetup.h  winsetup.pro  zip.c  zip.h
zenoinstall/: CMakeLists.txt  frmmain.cpp  frmmain.h  install.pro  install.qrc  installworker.cpp  installworker.h  main.cpp  netgetversion.cpp  netgetversion.h  netgetzeno.cpp  netgetzeno.h  unzip.h  updatemain.cpp  updatemain.h  winapi.cpp  winapi.h  zenodialog.cpp  zenodialog.h  zenoinstall.aps  zenoinstall.rc  zenosetup.cpp  zenosetup.h  zsinstance.cpp  zsinstance.h  zsnetthread.cpp  zsnetthread.h
zenoinstall/res/: default.css  version-dailybuild.json
zenoinstall/res/languages/: zh.qm  zh.ts
zenoinstall/res/license/: License.html
zenoinstall/res/license/License_files/: mpl-2-0.d89bc3bc9d45.css
